# horrible_vulkan_engine

./: 1  <S-Del>  @  README.md  compile_commands.json  shader_make.sh  ~
shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: CMakeLists.txt  vk_buffers.cpp  vk_buffers.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mem_alloc.cpp  vk_mem_alloc.h  vk_types.h
